Fixed editor role not being assigned and user colors being weird.

--- a/support-alert/css/main.css
+++ b/support-alert/css/main.css
@@ -51,7 +51,7 @@ html, body{
 .username[role=Pro]{
 	color: #b143d1;
 }
-.username[role=Mod]{
+.username[role=Mod], .username[role=ChannelEditor]{
 	color: #36e53a;
 }
 .username[role=Subscriber]{
